--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ mongodb/mongodb-init/db
 mongodb/mongodb-standalone/db
 mongodb/mongodb-replica/db
 mongodb/mongodb-replica/key
+portainer/portainer_data
