--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ mongodb/mongodb-standalone/db
 mongodb/mongodb-replica/db
 mongodb/mongodb-replica/key
 portainer/portainer_data
+kafka/kafka-with-zookeeper/kafka
