--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.2'
 services:
   portainer:
     container_name: portainer
-    image: portainer/portainer
+    image: portainer/portainer-ce
     ports:
       - "9000:9000"
     volumes:
