--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -1,12 +1,15 @@
-version: '3.2'
+version: '3'
 
 services:
   portainer:
+    image: portainer/portainer-ce:latest
     container_name: portainer
-    image: portainer/portainer-ce
-    ports:
-      - "9000:9000"
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/volumes:/var/lib/docker/volumes
-      - ./portainer_data:/data
+      - /etc/localtime:/etc/localtime:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./portainer-data:/data
+    ports:
+      - 9000:9000
