--- a/mock-server/docker-compose.yml
+++ b/mock-server/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
 
-  keycloak:
+  mockserver:
     image: mockserver/mockserver
     container_name: local-mock-server
     ports:
